; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_relation_restriction_equivalence.c_GenerateAllAttributeEquivalences.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/planner/extr_relation_restriction_equivalence.c_GenerateAllAttributeEquivalences.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32*, i32* }

@NIL = common dso_local global i32* null, align 8
@attributeEquivalenceId = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @GenerateAllAttributeEquivalences(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 1
  %10 = load i32*, i32** %9, align 8
  store i32* %10, i32** %3, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  store i32* %13, i32** %4, align 8
  %14 = load i32*, i32** @NIL, align 8
  store i32* %14, i32** %5, align 8
  %15 = load i32*, i32** @NIL, align 8
  store i32* %15, i32** %6, align 8
  %16 = load i32*, i32** @NIL, align 8
  store i32* %16, i32** %7, align 8
  store i32 1, i32* @attributeEquivalenceId, align 4
  %17 = load i32*, i32** %3, align 8
  %18 = call i32* @GenerateAttributeEquivalencesForRelationRestrictions(i32* %17)
  store i32* %18, i32** %5, align 8
  %19 = load i32*, i32** %4, align 8
  %20 = call i32* @GenerateAttributeEquivalencesForJoinRestrictions(i32* %19)
  store i32* %20, i32** %6, align 8
  %21 = load i32*, i32** %5, align 8
  %22 = load i32*, i32** %6, align 8
  %23 = call i32* @list_concat(i32* %21, i32* %22)
  store i32* %23, i32** %7, align 8
  %24 = load i32*, i32** %7, align 8
  ret i32* %24
}

declare dso_local i32* @GenerateAttributeEquivalencesForRelationRestrictions(i32*) #1

declare dso_local i32* @GenerateAttributeEquivalencesForJoinRestrictions(i32*) #1

declare dso_local i32* @list_concat(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
